# Federated_learning_project

./: .gitignore  README.md  debug_collapse.py  decentralised_fl_sim.py  leaf_datasets.py  model_variants.py  pyproject.toml  requirements.txt  results_dashboard.py  run_experiments.py  setup_test_data.py  sheets_config.template.json  sheets_exporter.py  test_direction_score.py  visualisations.py
dfl/: __init__.py  cli.py  config.py  metrics.py  network.py  node.py  simulator.py  utils.py
dfl/aggregators/: __init__.py  balance.py  base.py  fedavg.py  krum.py  trimmed.py  ubar.py
dfl/attacks/: __init__.py  alie.py  base.py  directed.py  gaussian.py  label_flip.py
dfl/verification/: __init__.py  acceptance.py  layer.py  trust.py
docs/: threat_model.md
tests/: __init__.py  test_post_acceptance.py
