[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dfl-simulator"
version = "0.1.0"
description = "Decentralised Federated Learning simulator with Byzantine fault tolerance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "All rights reserved"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "pillow>=9.5.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "networkx>=3.1",
]

[project.optional-dependencies]
sheets = ["gspread>=6.0.0", "google-auth>=2.0.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
dfl-sim = "dfl.cli:main"

[tool.setuptools.packages.find]
include = ["dfl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
